# 4D-gsplats

./: .dockerignore  .gitignore  LISENCE  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.base  build.sh  run.sh
dynamic_gsplats/: colmap_dataset.py  demo.py  file_ops.py  gsplat_train.py  scene_init.py  test.py  video_sync.py  visuals_utils.py
dynamic_gsplats/demos/: tv_demo.py  tv_with_train_demo.py  vggt_demo.py
dynamic_gsplats/python_colmap/: __init__.py  scene_manager.py
utils/: lint.py  setup.sh
