[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-gsplats"
version = "0.1.0"
authors = [
    {name = "Skylar Wurster", email = "swwurster@gmail.com"},
]
description = "Dynamic gaussian splats"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Internal Use Only"
]

dependencies = [
    "numpy==1.26.3",
    "pandas>=0.2.1",
    "torch==2.6.*",
    "imageio>=2.37.0",
    "tqdm",
    "trimesh>=4.6.12",
    "gradio",
    "opencv-python-headless",
    "scipy>=1.15.3",
    "matplotlib>=3.10.3",
    "onnxruntime>=1.22.0",
    "torchmetrics[image]",
    "scikit-learn==1.7.0",
    "tensorboard==2.19.0",
    "pycolmap==3.10",
    "lightglue @ git+https://github.com/jytime/LightGlue.git#egg=lightglue",
    "hydra-core",
    "xformers",
    "librosa",

    "vggt @ git+https://github.com/facebookresearch/vggt.git@8e3d2809c1c93fa27298c290605841d7e876b285",
    "fused-ssim @ git+https://github.com/rahul-goel/fused-ssim.git@8bdb59feb7b9a41b1fab625907cb21f5417deaac",
    "gsplat==1.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
pypi = { url = "https://pypi.org/simple" }
xformers = { index = "pytorch" }

[tool.setuptools]
packages = ["dynamic_gsplats"]

[tool.uv]
managed = true